openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: brewer
    app.kubernetes.io/component: brewer
    app.kubernetes.io/instance: brewer
    app.kubernetes.io/part-of: brewer-app
  name: brewer
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: brewer
    weight: 100
  wildcardPolicy: None
